Bug 94971 - Sidebar: chart panels -> Line -> Arrowhead superfluous
Summary: Sidebar: chart panels -> Line -> Arrowhead superfluous
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:5.1.0
Keywords:
Depends on:
Blocks: Chart-Sidebar
  Show dependency treegraph
 
Reported: 2015-10-11 23:32 UTC by Luke
Modified: 2016-10-24 12:17 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (11.10 KB, image/png)
2015-10-24 11:56 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2015-10-11 23:32:12 UTC
Steps to reproduce:
1. In calc create a Line chart or use attachment 119527 [details]
2. Edit the chart
3. Click on one of the lines
4. Modify chart panels -> Line -> beginning or ending Arrowhead

Either it should add an arrow head to the Line or the 2 arrowhead UI elements should be removed. 

The data series -> Line dialog box does not give any options to add arrowheads. Also I don't think it's a common use case to need arrow heads in charts, so it's probably safe to remove the 2 UI elements.
Comment 1 Joel Madero 2015-10-12 00:04:08 UTC
UX needed here.
Comment 2 Yousuf Philips (jay) (retired) 2015-10-12 12:32:27 UTC
No UX needed as the dialog doesnt have facilities to add arrows to the ends of a line, so the arrowhead drop downs should either be hidden or disabled.
Comment 3 Commit Notification 2015-10-12 21:55:26 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=af77042f62bc18c278c1acf6548b3ed41f0da871

disable arrow heads in chart sidebar, tdf#94971

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Yousuf Philips (jay) (retired) 2015-10-24 11:56:34 UTC
Created attachment 119925 [details]
screenshot

Would be better for the arrow controls to be disabled rather than hidden, as it leaves space on the left and right.