disable arrow heads in chart sidebar, tdf#94971

Change-Id: I631f34faf2befeb7cc61027c8fd59ef7b3543785