chart2/source/controller/sidebar/ChartLinePanel.cxx
@@ -136,6 +136,7 @@ ChartLinePanel::ChartLinePanel(vcl::Window* pParent,
     mbModelValid(true),
     maLineColorWrapper(mxModel, getColorToolBoxControl(mpTBColor.get()), "LineColor")
 {
+    disableArrowHead();
     std::vector<ObjectType> aAcceptedTypes { OBJECTTYPE_PAGE, OBJECTTYPE_DIAGRAM,
         OBJECTTYPE_DATA_SERIES, OBJECTTYPE_DATA_POINT,
         OBJECTTYPE_TITLE, OBJECTTYPE_LEGEND, OBJECTTYPE_DATA_CURVE,
